# tata-nexon-chatbot

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  chatbot_sessions.json  debug_chunks.py  debug_vector_db.py  ingest.py  main.py  pyproject.toml  requirements.txt
.chroma/: chroma.sqlite3
.codex/skills/: TO_DOS_tatanexonchatbot.txt  api.md  config.md  ingestion-pipeline.md  langgraph-agent.md  retrieval.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: chatClient.ts  client.ts
frontend/src/components/: AdminPanel.tsx  ChatWindow.tsx  Message.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
specs/: 01-ingestion.md  05-config.md  06-api.md  07-ui.md
specs/agent/: 03-langgraph-agent.md
specs/guardrails/: 04 - Guardrails.md
specs/retrieval/: 02-retrieval.md
src/agent/: graph.py  memory.py  schemas.py  state.py
src/agent/nodes/: answer_generator.py  clarify_node.py  (+8 more)
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/config/: __init__.py  ingestion.py  llm.py  retrieval.py  settings.py
src/ingestion/: chunker.py  embedder.py  parser.py  processor.py  scanner.py  storer.py
src/retrieval/: retriever.py
tests/agent/: conftest.py  test_graph.py
tests/api/: test_api.py
tests/config/: test_settings.py
tests/ingestion/: conftest.py  test_chunker.py  test_embedder.py  test_parser.py  test_processor.py  test_scanner.py  test_storer.py
tests/retrieval/: test_retriever.py  test_retriever_functional.py
(+15 files in other folders)
